methods.slug.SlugHunting.scala.error
Compilation error:
SlugHunting:14: error: not found: value isOverBaggel
  }while (isOverBaggel() == false)
          ^